RESOLVED FIXED167775
WK1 mouse events are missing movementX and movementY for pointerlock.
https://bugs.webkit.org/show_bug.cgi?id=167775
Summary WK1 mouse events are missing movementX and movementY for pointerlock.
Jeremy Jones
Reported 2017-02-02 21:36:52 PST
WK1 mouse events are missing movementX and movementY for pointerlock.
Attachments
Patch (9.79 KB, patch)
2017-02-02 21:51 PST, Jeremy Jones
ap: review+
buildbot: commit-queue-
Archive of layout-test-results from ews102 for mac-elcapitan (909.99 KB, application/zip)
2017-02-02 22:54 PST, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (926.47 KB, application/zip)
2017-02-02 22:59 PST, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-elcapitan (1.61 MB, application/zip)
2017-02-02 23:11 PST, Build Bot
no flags
Patch for landing. (10.03 KB, patch)
2017-02-03 16:59 PST, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2017-02-02 21:48:24 PST
Jeremy Jones
Comment 2 2017-02-02 21:49:04 PST
I don't expect this patch to work until https://bugs.webkit.org/show_bug.cgi?id=167134 is landed.
Jeremy Jones
Comment 3 2017-02-02 21:51:35 PST
Build Bot
Comment 4 2017-02-02 22:54:07 PST
Comment on attachment 300495 [details] Patch Attachment 300495 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/2995502 New failing tests: pointer-lock/mouse-event-delivery.html
Build Bot
Comment 5 2017-02-02 22:54:10 PST
Created attachment 300500 [details] Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 6 2017-02-02 22:59:28 PST
Comment on attachment 300495 [details] Patch Attachment 300495 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2995508 New failing tests: pointer-lock/mouse-event-delivery.html
Build Bot
Comment 7 2017-02-02 22:59:31 PST
Created attachment 300502 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 8 2017-02-02 23:11:13 PST
Comment on attachment 300495 [details] Patch Attachment 300495 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2995536 New failing tests: pointer-lock/mouse-event-delivery.html
Build Bot
Comment 9 2017-02-02 23:11:16 PST
Created attachment 300504 [details] Archive of layout-test-results from ews114 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Alexey Proskuryakov
Comment 10 2017-02-03 12:02:27 PST
Comment on attachment 300495 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=300495&action=review > Source/WebCore/platform/mac/PlatformEventFactoryMac.mm:719 > +#if ENABLE(POINTER_LOCK) > + m_movementDelta = IntPoint(event.deltaX, event.deltaY); > +#endif It feels a little strange for this to be under ENABLE(POINTER_LOCK). I guess it's OK if we don't use this data for anything else. > Tools/DumpRenderTree/mac/EventSendingController.mm:646 > + NSPoint prevMousePosition = lastMousePosition; WebKit style is to avoid abbreviations as much as possible; previousMousePosition would be a better name. It may also be cleaner to put the new position into "newMousePosition" instead, and only update lastMousePosition once we no longer need it. > Tools/WebKitTestRunner/mac/EventSenderProxy.mm:604 > + WKPoint prevMousePosition = m_position; Ditto.
Jeremy Jones
Comment 11 2017-02-03 16:55:00 PST
(In reply to comment #10) > Comment on attachment 300495 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=300495&action=review > > > Source/WebCore/platform/mac/PlatformEventFactoryMac.mm:719 > > +#if ENABLE(POINTER_LOCK) > > + m_movementDelta = IntPoint(event.deltaX, event.deltaY); > > +#endif > > It feels a little strange for this to be under ENABLE(POINTER_LOCK). I guess > it's OK if we don't use this data for anything else. > > > Tools/DumpRenderTree/mac/EventSendingController.mm:646 > > + NSPoint prevMousePosition = lastMousePosition; > > WebKit style is to avoid abbreviations as much as possible; > previousMousePosition would be a better name. > > It may also be cleaner to put the new position into "newMousePosition" > instead, and only update lastMousePosition once we no longer need it. I've changed this to newMousePosition. > > > Tools/WebKitTestRunner/mac/EventSenderProxy.mm:604 > > + WKPoint prevMousePosition = m_position; > > Ditto. Ditto.
Jeremy Jones
Comment 12 2017-02-03 16:59:05 PST
Created attachment 300580 [details] Patch for landing.
WebKit Commit Bot
Comment 13 2017-02-03 17:03:02 PST
Attachment 300580 [details] did not pass style-queue: ERROR: Tools/DumpRenderTree/mac/EventSendingController.mm:648: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Tools/WebKitTestRunner/mac/EventSenderProxy.mm:606: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 14 2017-02-03 19:05:07 PST
Comment on attachment 300580 [details] Patch for landing. Clearing flags on attachment: 300580 Committed r211663: <http://trac.webkit.org/changeset/211663>
Note You need to log in before you can comment on or make changes to this bug.